DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2006-11-20 patrickh     Extended the NSPR detection tests to provide more
                        information to the caller regarding the NSPR
                        installation.
                        NEW VERSION: 2.1.9
2006-11-20 patrickh     Fixed NSPR detection tests.
                        NEW VERSION: 2.1.8
2006-11-09 patrickh     Extended the tests for OpenAL, ALUT, GLUT, NSPR, and
                        Audiere to be smarter about 64-bit installations and to
                        report the directory containing the library (or
                        libraries) for the package.
                        NEW VERSION: 2.1.7
2006-11-09 patrickh     Extended DPP_HAVE_GLUT to handle the Mac OS X GLUT
                        framework.
                        NEW VERSION: 2.1.6
2006-11-09 patrickh     Store the Boost header directory path in
                        $BOOST_INCLUDE_DIR.
                        NEW VERSION: 2.1.5
2006-11-02 patrickh     Separated the ALUT test from DPP_HAVE_OPENAL. The new
                        way to test for ALUT is to use DPP_HAVE_ALUT.
                        NEW VERSION: 2.1.4
2006-08-31 patrickh     Callers of DPP_ABI_SETUP can now override the default
                        set of architectures targeted when making universal
                        binaries on Mac OS X.
                        NEW VERSION: 2.1.3
2006-07-10 patrickh     Added compiler detection macros for Objective-C
                        (DPP_PROG_OBJC) and Objective-C++ (DPP_PROG_OBJCXX).
2006-06-25 patrickh     Added support for universal binaries on Mac OS X.
                        NEW VERSION: 2.1.2
2006-06-25 patrickh     Use libtool(1) instead of ar(1) on Mac OS X.
2006-05-17 patrickh     Fixed a version detection bug in DPP_HAVE_GNU_MAKE for
                        the case of GNU Make pre-releases.